src/styles/home.css
.home {
  max-width: 468px;
  margin: auto;
  flex-direction: column;
  display: flex;
}

.home h1 {
  font-size: 1.875rem;
  line-height: 2.25rem;
  font-weight: 800;
}

.home ul {
  margin: 0;
  padding: 0;
}

.home .post {
  flex-direction: column;
  display: flex;
  border-bottom: 1px solid #dbdbdb;
}

.home .post:last-child {
  padding-bottom: 0.5rem;
  border-bottom: none;
}

.home .post .user {
  padding: 0.75rem 0rem;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.home .post .user .infos {
  all: unset;
  display: flex;
  align-items: center;
  gap: 0.75rem;
}

.post .user .infos:hover {
  cursor: pointer;
}

.home .post .user .infos img {
  width: 2rem;
  height: 2rem;
  border-radius: 50%;
  object-fit: cover;
  cursor: pointer;
  pointer-events: none;
}

.home .post .user .infos .texts {
  display: flex;
  align-items: center;
  gap: 0.25rem;
}

.home .post .user .infos .texts p {
  margin: 0;
  font-size: 0.875rem;
  line-height: 1.25rem;
  font-weight: 600;
  cursor: pointer;
}

.home .post .user .infos .texts span {
  margin: 0;
  font-size: 0.875rem;
  line-height: 1.25rem;
  font-weight: 400;
  color: #737373;
  cursor: pointer;
}

.home .post .user .delete-btn {
  all: unset;
  width: 1rem;
  width: 1rem;
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: pointer;
}

.home .post img {
  max-width: 468px;
  width: 100%;
  max-height: 585px;
  height: 100%;
  pointer-events: none;
}

.home .post .actions {
  flex-direction: column;
  display: flex;
}

.home .post .buttons {
  display: flex;
  gap: 0.75rem;
}

.home .post .actions img {
  width: 24px;
  height: 24px;
}

.home .post .actions button {
  all: unset;
  padding: 0.5rem 0;
  cursor: pointer;
}

.home .post .actions .likeBtn:hover {
  opacity: 0.5;
}

.home .post .actions .unlikeBtn:hover {
  opacity: 1;
}

.home .post .actions a {
  all: unset;
  padding: 0.5rem 0;
  cursor: pointer;
}

.home .post .actions a:hover {
  opacity: 0.5;
}

.home .post .actions .likeCount {
  margin: 0;
  font-size: 0.875rem;
  line-height: 1.25rem;
  font-weight: 600;
}

.home .post .actions .commentCount {
  margin: 0;
  font-size: 0.875rem;
  line-height: 1.25rem;
  font-weight: 400;
  color: #737373;
}

.home .loading {
  display: none;
  max-width: 2rem;
  width: 100%;
  max-height: 2rem;
  height: 100%;
  margin: auto;
  padding: 1rem;
}

@media (max-width: 485px) {
  .home .post .user {
    padding: 0.75rem 1rem;
  }

  .home .post .user .texts span {
    display: none;
  }

  .home .post .actions {
    padding: 0 1rem 0 1rem;
  }
}

@media (max-width: 250px) {
  .home .post .user {
    padding: 0.75rem 0.25rem;
  }

  .home .post .user .infos img {
    display: none;
  }

  .home .post .actions {
    padding: 0 0.25rem;
  }
}

